--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 :root {
-    background-color: blue;
+    background-color: rgb(100,50,250);
     --grid-cols: 1;
     --grid-rows: 1;
 }
@@ -7,8 +7,69 @@
 h1 {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 40px;
+    color: white;
 }
 
-.gridEtch{
-    
+#intro {
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+}
+
+
+#grid-container {
+    display: grid;
+    grid-gap: 1px;
+    grid-template-rows: repeat(var(--grid-rows), 25px);
+    grid-template-columns: repeat(var(--grid-cols), 25px);
+    background-color:  rgb(100,50,250);
+ 
+}
+
+.grid-area {
+    background-color: cornsilk;
+    text-align: center;
+    color: white;
+}
+
+.grid-area > div {
+    background-color: firebrick;
+}
+
+#reset {
+    margin-left: 10px;
+    margin-bottom: 25px;
+}
+
+#color-picker {
+    margin-bottom: 10px;;
+}
+
+#red {
+    background-color: firebrick;
+    color: white;
+}
+
+#blue {
+    background-color: blue;
+    color: white;
+}
+
+#green {
+    background-color: green;
+    color:white;
+}
+
+#pink {
+    background-color: pink;
+    color: black;
+}
+
+#yellow {
+    background-color: yellow;
+    color: black;
+}
+
+#cornsilk {
+    background-color: cornsilk;
+    color: cornsilk;
 }
